updats dle mailu

--- a/bazar.html
+++ b/bazar.html
@@ -232,11 +232,11 @@
         </div>
         <div>
             <i class="fa fa-phone"></i>
-            <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
+            <p><a href="tel:+420722757800">+420 722 757 800</a>- Bělunek</p>  
         </div>
         <div>
             <i class="fa fa-phone"></i>
-            <p><a href="tel:+420722757880">+420 722 757 880</a></p>  
+            <p><a href="tel:+420722757880">+420 722 757 880</a>- Dzimbaník</p>  
         </div>
         <div>
             <i class="fa fa-envelope"></i>
