--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="services-item">
             <div class="services">
                 <h2>Naše služby</h2>
-                <p>Nabízíme k pronájmu a prodeji širokou škálu elektro-motorek značky Kuberg, jsme součástí různých událostí, předáváme zkušenosti s jízdou na motorce a mnohé další.</p><br>
+                <p>Nabízíme k pronájmu a prodeji širokou škálu elektro-motorek značky Kuberg pro děti od 2,5 let i pro dospělé, provádíme servis, pořádáme nebo jsme součástí různých událostí, předáváme zkušenosti s jízdou na motorce a mnohé další.</p><br>
                 <a href="sluzby.html" class="service-btn">Více</a>
             </div>
         </div>
@@ -118,90 +118,23 @@
 </section>
 
 <section>
-    <h2>Opravdu moc nás naplňuje, když nabízíme příležitost, kterou jsme my neměli a tedy když vidíme rozzářené oči těch nejmenších, ale i starších, tak víme, že to je přesně to, proč jsme tady.
-
-        V budoucnu se chceme ohlédnout a vidět úspěšné jezdce v jakémkoliv motoristickém sportu nebo prostě jen spokojené zájemce, kteří se poprvé svezli právě u nás a splnili jsme jim jejich sen.</h2>
+    <h2>Opravdu moc nás naplňuje, když nabízíme příležitost, kterou jsme my neměli a tedy, když vidíme rozzářené oči těch nejmenších, ale i starších, tak víme, že to je přesně to, proč jsme tady. V budoucnu se chceme ohlédnout a vidět úspěšné jezdce v jakémkoliv motoristickém sportu nebo prostě jen spokojené zájemce, kteří se poprvé svezli právě u nás a splnili jsme jim jejich sen.</h2>
 </section>
 
-   <h2 class="block-three-headline" id="aboutus">A kdo vlastně jsme?</h2>
+   <h2 class="block-three-headline" id="aboutus">Naši partneři</h2>
 
 </div>
 
 
-<div class="block-three">
-    <div class="person-container">
-        <div class="person-item">
-            <img src="img/Vojta.jpg" alt="">
-        </div>
-        <div class="person-item">
-            <div class="personal-info">
-            <h3 class="name">Vojta</h3>
-            <p class="label">Záliby</p>
-            <p class="description">Freestyle Motocross,  posilování,  ostatní sporty,  rodina,  cestování,  Universe,  cizí jazyky,  přátelé</p>
-            <p class="label">Freestyle Motocross od:  2011</p>
-            <p class="description">Nikdy jsem MX nejezdil, ale v roce 2010 jsem si poprvé koupil motorku 250 2-takt,<br> začal jsem se učit jezdit a od té doby jsem na trati párkrát byl.
-            </p>
-            <p class="label">Motocykl</p>
-            <p class="description">Suzuki RM 250</p>
-            <p class="label">Úspěchy</p>
-            <p class="description">2016 – účast na Mezinárodním mistrovství ČR ve Freestyle Motocrossu<br>
-                2017 – 6. místo na druhém seriálu Mezinárodního mistrovství ČR ve Freestyle Motocrossu<br>
-                2017 – celkové 9. místo ve Freestyle Motocrossu pro rok 2017 v České republice<br>
-                2017 – několik show v ČR a v Polsku<br>
-                2018 – několik show v ČR<br><br>
-                Kuberg,  Meatfly,  Oulehla Motor Parts,  200% LIFE,  Heart Of Riders,  FCF Fontána Fitness, <br> K+K servis,  Tepelná čerpadla Mazur 
-            </p><br>
 
-            <div class="person-social">
-                <p>Vojtěch Běluněk</p>
-                <p class="position">majitel, jednatel</p>
-                <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank" class="person-social"><i class="fab fa-facebook-square"></i></a>
-                <a href="#" target="blank" class="person-social"><i class="fab fa-instagram" ></i></a>
-                <a href="#" target="blank" class="person-social"><i class="fab fa-youtube" ></i></a>
-            </div>
-        </div>
-        </div>
-    </div>
-
-    <div class="person-container" id="banik">
-        <div class="person-item" >
-            <div class="personal-info">
-            <h3 class="name">Baník</h3>
-            <p class="label">Záliby</p>
-            <p class="description">Freestyle Motocross,  rybaření,  zaměstnání,  sport,  přátelé </p>
-            <p class="label">Freestyle Motocross od:  2010</p>
-            <p class="description">Nikdy závodně jsem nejezdil</p>
-            <p class="label">Motocykl</p>
-            <p class="description">KTM 250 SX</p>
-            <p class="label">Úspěchy</p>
-            <p class="description">Několik show v ČR, Polsku, Itálii, na Maltě, Sardinii a Sicílii<br>
-                2016 – 7. pozice na Mezinárodním mistrovství ČR ve Freestyle Motocrossu<br>
-                2017 – 6. místo na prvním seriálu Mezinárodního mistrovství ČR ve Freestyle Motocrossu<br>
-                2017 – 4. místo na druhém seriálu Mezinárodního mistrovství ČR ve Freestyle Motocrossu<br>
-                2017 – celkové 3. místo ve Freestyle Motocrossu pro rok 2017 v České republice<br>
-                2017 / 2018 – několik show v ČR a v Polsku<br><br>
-                Kuberg,  UAX,  Oulehla Motor Parts,  Heart Of Riders,  Přítelkyně 
-            </p><br>
-    
-            <div class="person-social">
-                <p>Milan Dzimbaník</p>
-                <p class="position">majitel, jednatel</p>
-                <a href="#" target="blank" class="person-social"><i class="fab fa-instagram" ></i></a>
-            </div>
-        </div>
-    </div>
-
-        <div class="person-item">
-            <img src="img/Banik.jpg" alt="">
-        </div>
-    </div>
-</div>
 
 <!--PARTNERS-->
 <div class="partners">
-    <div class="partners-item"><h3 class="partners-headline">Naši partneři</h3></div>
     <div class="partners-item"><a href="https://www.kuberg.com/en" target="_blank"><img src="img/kuberg.png" alt="" class="partner-logo"></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/uax-logo.png" alt="" width="30%" class="partner-logo" id="uax" ></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/uax.png" alt="" width="100%" class="partner-logo" id="uax" ></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/motottrade.png" alt="" width="100%" class="partner-logo" id="uax" ></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/hobby.png" alt="" width="100%" class="partner-logo" id="uax" ></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/hearts.png" alt="" width="100%" class="partner-logo" id="uax" ></a></div>
 </div>
 <!--PARTNERS-->
 
@@ -227,11 +160,11 @@
         </div>
         <div>
             <i class="fa fa-phone"></i>
-            <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
+            <p><a href="tel:+420722757800">+420 722 757 800</a>- Bělunek</p>  
         </div>
         <div>
             <i class="fa fa-phone"></i>
-            <p><a href="tel:+420722757880">+420 722 757 880</a></p>  
+            <p><a href="tel:+420722757880">+420 722 757 880</a>- Dzimbaník</p>  
         </div>
         <div>
             <i class="fa fa-envelope"></i>
