--- a/kontakt.html
+++ b/kontakt.html
@@ -82,7 +82,7 @@
 
 
 <!--KONTAKT-->
-<h2 class="form-headline">Máte zájem o Nákup či prodej motorek, FMX Show, Chcete zorganizovat adrenalinový zážitek pro člena rodiny nebo si chcete jen tak zkusit zajezdit? S čímkoliv Vám rádi pomůžeme, tak nás neváhejte kontaktovat.</h2>
+<h2 class="form-headline">Máte zájem o nákup, pronájem, prodej či servis motorek, FMX Show, Chcete zorganizovat adrenalinový zážitek pro člena rodiny nebo si chcete jen tak zkusit zajezdit? S čímkoliv Vám rádi pomůžeme, tak nás neváhejte kontaktovat.</h2>
 <div class="formcard">
     <div class="header">
       <h2>Napište nám!</h2>
@@ -141,6 +141,7 @@
             <option value="Členství">Členství</option>
             <option value="Organizace události">Organizace události</option>
             <option value="Individuální domluva">Individuální domluva</option>
+            <option value="Individuální domluva">Jiný dotaz</option>
           </select>
       </div>
   
@@ -177,6 +178,75 @@
   </div>
   <!-- end of Card -->
 
+
+  <div class="block-three">
+    <div class="service-head">
+      <h2>A kdo vlastně jsme?</h2>
+  </div>
+    <div class="person-container">
+        <div class="person-item">
+            <img src="img/Vojta.jpg" alt="">
+        </div>
+        <div class="person-item">
+            <div class="personal-info">
+            <h3 class="name">Vojta</h3>
+            <p class="description"> <strong>Záliby: </strong> Motocross,  posilování,  ostatní sporty,  rodina,  cestování,  Universe,  cizí jazyky,  přátelé</p>
+            <p class="description"><strong>Freestyle Motocross od: </strong>  2011</p>
+            <p class="description"><strong>MX od:</strong>: Nikdy jsem MX nejezdil, ale v roce 2010 jsem si poprvé koupil motorku 250 2-takt, začal jsem se učit jezdit a od té doby jsem na trati párkrát byl.
+            </p>
+            <p class="description"><strong>Motocykl: </strong>Suzuki RM 250</p>
+            <p class="description"> <strong>Úspěchy: </strong>2016 – účast na Mezinárodním mistrovství ČR ve Freestyle Motocrossu<br>
+                2017 – 6. místo na druhém seriálu Mezinárodního mistrovství ČR ve Freestyle Motocrossu<br>
+                2017 – celkové 9. místo ve Freestyle Motocrossu pro rok 2017 v České republice<br>
+                2017 – několik show v ČR a v Polsku<br>
+                2018 – několik show v ČR</p><br>
+                <p class="description"><strong>Sponzoři a partneři: </strong>: Kuberg, Meatfly, Oulehla Motor Parts, 200% LIFE, K+K servis,, Heart Of Riders
+                </p>
+            </p><br>
+
+            <div class="person-social">
+                <p>Vojtěch Bělunek</p>
+                <p class="position">majitel, jednatel</p>
+                <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank" class="person-social"><i class="fab fa-facebook-square"></i></a>
+                <a href="#" target="blank" class="person-social"><i class="fab fa-instagram" ></i></a>
+                <a href="#" target="blank" class="person-social"><i class="fab fa-youtube" ></i></a>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <div class="person-container" id="banik">
+        <div class="person-item" >
+            <div class="personal-info">
+            <h3 class="name">Baník</h3>
+            <p class="description"><strong>Záliby: </strong>Freestyle Motocross,  rybaření,  zaměstnání,  sport,  přátelé </p>
+            <p class="description"><strong>Freestyle Motocross od:</strong>  2010</p>
+            <p class="description"><strong>MX od: </strong>Nikdy závodně jsem nejezdil</p>
+            <p class="description"><strong>Motocykl: </strong>KTM 250 SX</p>
+            <p class="description"><strong>Úspěchy: </strong>Několik show v ČR, Polsku, Itálii, na Maltě, Sardinii a Sicílii<br>
+                2016 – 7. pozice na Mezinárodním mistrovství ČR ve Freestyle Motocrossu<br>
+                2017 – 6. místo na prvním seriálu Mezinárodního mistrovství ČR ve Freestyle Motocrossu<br>
+                2017 – 4. místo na druhém seriálu Mezinárodního mistrovství ČR ve Freestyle Motocrossu<br>
+                2017 – celkové 3. místo ve Freestyle Motocrossu pro rok 2017 v České republice<br>
+                2017 / 2018 – několik show v ČR a v Polsku</p><br> 
+            </p>
+            <p class="description"><strong>Sponzoři a partneři: </strong> Kuberg, UAX, Oulehla Motor Parts, Heart Of Riders, Přítelkyně
+            </p><br>
+    
+            <div class="person-social">
+                <p>Milan Dzimbaník</p>
+                <p class="position">majitel, jednatel</p>
+                <a href="#" target="blank" class="person-social"><i class="fab fa-instagram" ></i></a>
+            </div>
+        </div>
+    </div>
+
+        <div class="person-item">
+            <img src="img/Banik.jpg" alt="">
+        </div>
+    </div>
+</div>
+
 <!--FOOTER START-->
 <footer class="footer">
     <div class="footer-logo">
@@ -199,11 +269,11 @@
         </div>
         <div>
             <i class="fa fa-phone"></i>
-            <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
+            <p><a href="tel:+420722757800">+420 722 757 800</a>- Bělunek</p>  
         </div>
         <div>
           <i class="fa fa-phone"></i>
-          <p><a href="tel:+420722757880">+420 722 757 880</a></p>  
+          <p><a href="tel:+420722757880">+420 722 757 880</a>- Dzimbaník</p>  
       </div>
         <div>
             <i class="fa fa-envelope"></i>
