--- a/motorky.html
+++ b/motorky.html
@@ -90,13 +90,6 @@
             <span class="tooltiptext">Kuberg Trial</span>
         </div>
 
-        <div class="slick-itm" id="nine">
-            <a class="tablinks" onclick="openTab(event, 'alta-motors-redshift')">
-                <img src="img/motorky/menu/alta-motors-redshift.jpg" alt="">
-            </a>
-            <span class="tooltiptext">ALTA Motors Redshift</span>
-        </div>
-
         <div class="slick-itm" id="five">
             <a class="tablinks" onclick="openTab(event, 'Kuberg-Cross-Hero-Edition')">
                 <img src="img/motorky/menu/Kuberg-Cross-Hero-Edition.png" alt="">
@@ -111,6 +104,13 @@
             <span class="tooltiptext">Kuberg Cross</span>
         </div>
 
+        <div class="slick-itm" id="eight">
+            <a class="tablinks" onclick="openTab(event, 'Kuberg-Downhill')">
+                <img src="img/motorky/menu/Kuberg-Freerider-Street.png" alt=""> <!--DOPLNIT FOTKU-->
+            </a>
+            <span class="tooltiptext">Kuberg Ranger Downhill Scooter</span>
+        </div>
+
         <div class="slick-itm" id="seven">
             <a class="tablinks" onclick="openTab(event, 'kuberg-challenger')">
                 <img src="img/motorky/menu/Kuberg-Challenger.png" alt="">
@@ -118,11 +118,11 @@
             <span class="tooltiptext">Kuberg Challenger</span>
         </div>
 
-        <div class="slick-itm" id="eight">
-            <a class="tablinks" onclick="openTab(event, 'Kuberg-Freerider-Street')">
-                <img src="img/motorky/menu/Kuberg-Freerider-Street.png" alt="">
+        <div class="slick-itm" id="nine">
+            <a class="tablinks" onclick="openTab(event, 'alta-motors-redshift')">
+                <img src="img/motorky/menu/alta-motors-redshift.jpg" alt="">
             </a>
-            <span class="tooltiptext">Kuberg Freerider Street</span>
+            <span class="tooltiptext">ALTA Motors Redshift</span>
         </div>
 
 
@@ -963,15 +963,15 @@
     </div>
 </div>
 
-<div id="Kuberg-Freerider-Street" class="tabcontent">
+<div id="Kuberg-Downhill" class="tabcontent">
     <div class="tabitem">
-        <img src="img/motorky/menu/Kuberg-Freerider-Street.jpg" alt="" width="100%">
+        <img src="img/motorky/menu/Kuberg-Freerider-Street.jpg" alt="" width="100%"> <!--UPRAVIT FOTKU-->
     </div>
 
     <div class="tabitem">
         <div class="tabitem-text">
             <table>
-                <h1>Kuberg Freerider Street</h1>
+                <h1>Kuberg Ranger Downhill Scooter</h1>  <!--UPRAVIT INFO-->
                 <tr>
                     <td class="tab-label">Kontrolér:</td>
                     <td>BLDC 4 kw</td>
@@ -1066,16 +1066,16 @@
 
 <div class="main-head">
     <h1>Nabídka motorek</h1>
-    <p>Ve spolupráci se známou značkou motorek <a href="https://www.kuberg.com/en" target="_blank">Kuberg</a>, Vám přinášíme ty nejlepší motorky na vyzkoušení pro <strong> malý i velký</strong> milovníky motocrossu.
-       <p> Vyberte si motorku pro sebe nebo svoji ratolest a přijdte si s námi zajezdit či už na jednu z našich <a href="novinky.html" target="_blank">událostí</a>,<br> nebo si motorku vypujčte a užijte si svůj skvělý adrenalinový den.</p>
+    <p>Ve spolupráci se známou českou značkou motorek <a href="https://www.kuberg.com/en" target="_blank">Kuberg</a>, Vám přinášíme ty nejlepší stroje na vyzkoušení pro <strong> malé i velký</strong> milovníky a nadšence motorek.
+       <p> Vyberte si motorku pro sebe nebo svoji ratolest a přijďte si s námi zajezdit k nám či na jednu z našich <a href="novinky.html" target="_blank">událostí</a>,<br> nebo si motorku vypůjčte a užijte si svůj skvělý adrenalinový den.</p>
     </p>
     <a href="https://www.kuberg.com/en" target="_blank"><img src="img/kuberg.png" alt=""></a>
 </div>
 
 <div class="price-list">
     <div class="price-item">
-        <h2>Všechny motorky jsou k dispozici k zapujčení na den, na dva dny nebo na týden.<br>
-        Nabízíme taky možnost dlouhodobého pronájmu na měsíc či na rok.<br>Pro více informací s můžete podívat na náš ceník a následně nás <a href="kontakt.html" target="_blank">kontaktovat</a>.</h2>
+        <h2>Všechny motorky jsou k dispozici k zapůjčení na den, na dva dny nebo na týden, popřípadě i na jinou dobu.<br>
+        Nabízíme taky možnost dlouhodobého pronájmu na měsíc či na rok.<br>Pro více informací se můžete podívat na náš ceník a následně nás <a href="kontakt.html" target="_blank">kontaktovat</a>.</h2>
         <a href="docs/Ceník pronájmu elektrických a spalovacích motocyklů.pdf" id="price-btn" download>Ceník ke stažení</a>
         
     </div>
@@ -1109,11 +1109,11 @@
         </div>
         <div>
             <i class="fa fa-phone"></i>
-            <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
+            <p><a href="tel:+420722757800">+420 722 757 800</a>- Bělunek</p>  
         </div>
         <div>
             <i class="fa fa-phone"></i>
-            <p><a href="tel:+420722757880">+420 722 757 880</a></p>  
+            <p><a href="tel:+420722757880">+420 722 757 880</a>- Dzimbaník</p>  
         </div>
         <div>
             <i class="fa fa-envelope"></i>
