--- a/sluzby.html
+++ b/sluzby.html
@@ -63,8 +63,8 @@
       <a href="#blockthree">Organizace událostí</a>
       <a href="#blockfour">FMX Show</a>
       <a href="#blockfive">Bazar</a>
+      <a href="#blocknine">Servis</a>
       <a href="#blocksix">Výkup</a>
-      <a href="#blocksix">Servis</a>
       <a href="#blockseven">Členství</a>
       <a href="#blockeight">Individuální domluva</a>
   </div>
@@ -129,22 +129,24 @@
         </div>
 
         <div class="blockthree-item">
-            <h3>Jsme součástí různých akcí spojených s dětmi či elektro-mobilitou a pořádáme aktivity spojené s motorkami.
-            Stačí nás kontaktovat a sdělit nám, o kterou akci a aktivitu máte zájem a společně vytvoříme zajímavý zážitek pro nejmenší i dospělé, jednotlivce i skupiny, začátečníky i zkušené.
-            <strong>možností je mnoho!</strong></h3>
+            <h3>Jsme součástí různých akcí spojených s dětmi či elektro-mobilitou a pořádáme aktivity spojené s motorkami. Stačí nás kontaktovat a sdělit nám, o kterou akci a aktivitu máte zájem a společně vytvoříme zajímavý zážitek pro nejmenší i dospělé, jednotlivce i skupiny, začátečníky i zkušené. 
+            <strong>Možností je mnoho!</strong></h3>
             <p class="events">Další události a služby:</p><br>
-            <p class="event">veřejné zkušební jízdy na akcích (významné akce, sportovní události, výroční akce, festivaly, dětské dny apod.)<br>
-            výstava elektrických motorek Kuberg<br>
-            individuální věnování se jezdci<br>
-            dětské dny<br>
-            firemní akce, teambuilding<br>
-            oslavy<br>
-            jízdy na adaptačních kurzech<br>
-            jízdy pro školy, kroužky, tábory a pro různé skupiny<br>
-            vyjížďky do přírody s průvodcem na motocyklu<br>
-            FREE moto STYLE academy camp<br>
-            závody na elektrických motocyklech<br>
-            a další</p>
+
+            <ul class="event">
+                <li>veřejné zkušební jízdy na akcích (významné akce, sportovní události,<br> výroční akce, festivaly, dětské dny apod.)</li>
+                <li>výstava elektrických motorek Kuberg</li>
+                <li>individuální věnování se jezdci</li>
+                <li>dětské dny</li>
+                <li>firemní akce, teambuilding</li>
+                <li>oslavy</li>
+                <li>jízdy na adaptačních kurzech</li>
+                <li>jízdy pro školy, kroužky, tábory a pro různé skupiny</li>
+                <li>vyjížďky do přírody s průvodcem na motocyklu</li>
+                <li>FREE moto STYLE academy camp</li>
+                <li>závody na elektrických motocyklech</li>
+                <li>a další</li>
+            </ul>
         
             <a href="novinky.html">Přejít na události</a>
         </div>
@@ -196,24 +198,41 @@
   </div>
 </div>
 
+<div class="block-container" id="blocknine">
+    <div class="service-head">
+        <h2>Servis</h2>
+    </div>
+  <div class="blocknine">
+      <div class="blocknine-item">
+          
+        <h3>Přestala Vám elektromotorka fungovat?
+
+            Uděláme pro Vás záruční nebo pozáruční servis, repasujeme nebo provedeme opravu a brzy budete moci zase jezdit.</h3>
+      </div>
+
+      <a href="kontakt.html" id="sell">Chci opravit motorku</a>
+
+  </div>
+</div>
+
 <div class="block-container" id="blocksix">
     <div class="service-head">
-        <h2>Výkup / Servis</h2>
+        <h2>Výkup</h2>
     </div>
   <div class="blocksix">
       <div class="blocksix-item">
           <h3>Koupili jste si elektrický motocykl Kuberg, například model START, ale dítě již vyrostlo a potřebuje větší?
 
             Buď můžete vložit inzerát do novin či na internet, anebo napsat nám a probereme možnost odkupu i s možností výměny za jinou motorku.</h3><br>
-        <h3>Přestala Vám elektromotorka fungovat?
-
-            Uděláme pro Vás záruční nebo pozáruční servis, repasujeme nebo provedeme opravu a brzy budete moci zase jezdit.</h3>
       </div>
 
-      <a href="kontakt.html" id="sell">Chci prodat nebo opravit motorku</a>
+      <a href="kontakt.html" id="sell">Chci prodat motorku</a>
 
   </div>
 </div>
+
+
+
 
 <div class="block-container" id="blockseven">
     <div class="service-head">
@@ -237,6 +256,9 @@
 </div>
 
 <div class="block-container" id="blockeight">
+    <div class="service-head">
+        <h2>Individuální domluva</h2>
+    </div>
   <div class="blockeight">
 <p>Máte nápad na aktivitu nebo akci, která by mohla být spojená s naší firmou a s elektromotorkama?
 
@@ -271,11 +293,11 @@
         </div>
         <div>
             <i class="fa fa-phone"></i>
-            <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
+            <p><a href="tel:+420722757800">+420 722 757 800</a>- Bělunek</p>  
         </div>
         <div>
             <i class="fa fa-phone"></i>
-            <p><a href="tel:+420722757880">+420 722 757 880</a></p>  
+            <p><a href="tel:+420722757880">+420 722 757 880</a>- Dzimbaník</p>  
         </div>
         <div>
             <i class="fa fa-envelope"></i>
