--- a/motorky.html
+++ b/motorky.html
@@ -15,11 +15,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">    
-<link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="css/style-four.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/slick.css">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style-four.css">
+<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="css/slick.css">
 
 </head>
 
@@ -43,16 +43,15 @@
 </div>
   
 <!-- Use any element to open/show the overlay navigation menu -->
-<span onclick="openNav()" class="toggle-btn"><img src="img/toggle-btn.svg" alt="" width="10%">   Menu</span>
-
-  <div class="hero">
+<div class="hero">
+    <span onclick="openNav()" class="toggle-btn"><img src="img/toggle-btn.svg" alt="" width="10%">   Menu</span>
     <a href="index.html">
         <div class="logo">
-            <img src="img/logo.svg" alt="" width="4%">
-            <h2 class="logo-name">FREE moto STYLE academy</h2>
+            <img src="img/logo-hor-white.svg" alt="" width="20%">
         </div>
     </a>
-  </div>
+  </div><br><br>
+
 
   <h1 class="main-headline">MOTORKY</h1>
   <p class="main-descp">Nabízíme k pronájmu a prodeji širokou škálu elektro-motorek značky Kuberg, jsme součástí různých událostí,<br> předáváme zkušenosti s jízdou na motorce a mnohé další.</p>
@@ -120,7 +119,7 @@
 
         <div class="slick-itm" id="nine">
             <a class="tablinks" onclick="openTab(event, 'alta-motors-redshift')">
-                <img src="img/motorky/menu/alta-motors-redshift.jpg" alt="">
+                <img src="img/motorky/menu/alta.png" alt="">
             </a>
             <span class="tooltiptext">ALTA Motors Redshift</span>
         </div>
@@ -599,7 +598,7 @@
 
 <div id="alta-motors-redshift" class="tabcontent">
     <div class="tabitem">
-        <img src="img/motorky/menu/alta-motors-redshift.jpg" alt="" width="100%">
+        <img src="img/motorky/menu/alta.jpg" alt="" width="100%">
         <div class="price-small">
             <h2>Ceny pronájmu</h2>
                 <p>Možnosti pronájmu a ceny jsou dle domluvy. Záleží na místě, jestli je pronájem krátkodobý či dlouhodobý, pod dohledem nebo bez.</p>
