--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FREEmotoSTYLEacademy</title>
     <meta name="author" content="alexhatal.com">
-    <meta name="description" content="Potřebujete logo pro Vaší firmu, nové webové stránky či redisign? Už víc nehledejte.">
+    <meta name="description" content="">
     <meta name="keywords" content="logo design, graphic dsign, grafika, grafický dizajn, web, web stránky, web page, web development, kódování, koding, vývoj webu, firemní identita, vizitky, strategie,marketing">
     <meta property="og:title" content="Grafický dizajn a web development">
     <meta property="og:description" content="Potřebujete logo pro Vaší firmu, nové webové stránky či redisign? Už víc nehledejte. Ráda zhmotním Vaše představy.">
@@ -38,13 +38,13 @@
 </div>
   
 <!-- Use any element to open/show the overlay navigation menu -->
-<span onclick="openNav()" class="toggle-btn"><img src="img/toggle-btn.svg" alt="" width="10%">   Menu</span>
+
 
   <div class="hero">
+    <span onclick="openNav()" class="toggle-btn"><img src="img/toggle-btn.svg" alt="" width="10%">   Menu</span>
     <a href="index.html">
         <div class="logo">
-            <img src="img/logo.svg" alt="" width="5%">
-            <h2 class="logo-name">FREE moto STYLE academy</h2>
+            <img src="img/logo-hor-white.svg" alt="" width="20%">
         </div>
     </a>
   </div><br><br>
@@ -141,7 +141,7 @@
 <!--FOOTER START-->
 <footer class="footer">
     <div class="footer-logo">
-        <a href="index.html"><img src="img/logo.svg"></a>
+        <a href="index.html"><img src="img/footer-logo.svg"></a>
     </div>
     <div class="footer-left">
         <div class="footer-links">
@@ -177,6 +177,7 @@
             <p class="footer-company">Spisová značka: C 70050<br>vedená u Krajského soudu v Ostravě <br>IČO:05953723<br>Zálužné 65, 749 01 Vítkov</p>
     </div>
     <hr>
+    <p class="location">Najdete nás v: Opavsko, Ostravsko, Pardubicko, Brněnsko</p>
     <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="https://divavirtualagency.com" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
 </footer>
 <!--FOOTER END-->
