--- a/kontakt.html
+++ b/kontakt.html
@@ -45,11 +45,10 @@
 
   <div class="hero">
     <a href="index.html">
-        <div class="logo">
-            <img src="img/logo.svg" alt="" width="4%">
-            <h2 class="logo-name">FREE moto STYLE academy</h2>
-        </div>
-    </a>
+      <div class="logo">
+          <img src="img/logo-hor-white.svg" alt="" width="15%">
+      </div>
+  </a>
   </div>
 
 
