--- a/novinky.html
+++ b/novinky.html
@@ -46,8 +46,7 @@
   <div class="hero">
     <a href="index.html">
         <div class="logo">
-            <img src="img/logo.svg" alt="" width="4%">
-            <h2 class="logo-name">FREE moto STYLE academy</h2>
+            <img src="img/logo-hor-white.svg" alt="" width="15%">
         </div>
     </a>
   </div>
