--- a/novinky.html
+++ b/novinky.html
@@ -41,15 +41,16 @@
 </div>
   
 <!-- Use any element to open/show the overlay navigation menu -->
-<span onclick="openNav()" class="toggle-btn"><img src="img/toggle-btn.svg" alt="" width="10%">   Menu</span>
 
-  <div class="hero">
+<div class="hero">
+    <span onclick="openNav()" class="toggle-btn"><img src="img/toggle-btn.svg" alt="" width="10%">   Menu</span>
     <a href="index.html">
         <div class="logo">
-            <img src="img/logo-hor-white.svg" alt="" width="15%">
+            <img src="img/logo-hor-white.svg" alt="" width="20%">
         </div>
     </a>
-  </div>
+  </div><br><br>
+
 
   <!--MAIN START-->
   <div class="bazar">
@@ -329,7 +330,7 @@
   <!--FOOTER START-->
 <footer class="footer">
     <div class="footer-logo">
-        <a href="index.html"><img src="img/logo.svg"></a>
+        <a href="index.html"><img src="img/footer-logo.svg"></a>
     </div>
     <div class="footer-left">
         <div class="footer-links">
@@ -366,6 +367,7 @@
             <p class="footer-company">Spisová značka: C 70050<br>vedená u Krajského soudu v Ostravě <br>IČO:05953723<br>Zálužné 65, 749 01 Vítkov</p>
     </div>
     <hr>
+    <p class="location">Najdete nás v: Opavsko, Ostravsko, Pardubicko, Brněnsko</p>
     <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="www.divavirtualagency.com" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
 </footer>
 <!--FOOTER END-->
