--- a/kontakt.html
+++ b/kontakt.html
@@ -41,22 +41,22 @@
 </div>
   
 <!-- Use any element to open/show the overlay navigation menu -->
-<span onclick="openNav()" class="toggle-btn"><img src="img/toggle-btn.svg" alt="" width="10%">   Menu</span>
-
-  <div class="hero">
-    <a href="index.html">
+<div class="hero">
+  <span onclick="openNav()" class="toggle-btn"><img src="img/toggle-btn.svg" alt="" width="10%">   Menu</span>
+  <a href="index.html">
       <div class="logo">
-          <img src="img/logo-hor-white.svg" alt="" width="15%">
+          <img src="img/logo-hor-white.svg" alt="" width="20%">
       </div>
   </a>
-  </div>
+</div><br>
 
 
   <!--MAIN START-->
 <div class="contact-headline">
     <div class="contact-item">
-    <img src="img/logo-white.svg" alt="" width="70%">
+    <img src="img/footer-logo.svg" alt="" width="100%">
     </div>
+
     <div class="contact-item" id="contact-info">
     <h2>FREE moto STYLE academy s.r.o.</h2>
     <p><strong>Sídlo</strong>: Zálužné 65, 749 01 Vítkov, Česká republika</p>
@@ -249,7 +249,7 @@
 <!--FOOTER START-->
 <footer class="footer">
     <div class="footer-logo">
-        <a href="index.html"><img src="img/logo.svg"></a>
+        <a href="index.html"><img src="img/footer-logo.svg"></a>
     </div>
     <div class="footer-left">
         <div class="footer-links">
@@ -286,6 +286,7 @@
             <p class="footer-company">Spisová značka: C 70050<br>vedená u Krajského soudu v Ostravě <br>IČO:05953723<br>Zálužné 65, 749 01 Vítkov</p>
     </div>
     <hr>
+    <p class="location">Najdete nás v: Opavsko, Ostravsko, Pardubicko, Brněnsko</p>
     <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="www.divavirtualagency.com" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
 </footer>
 <!--FOOTER END-->
