--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 
 <!--PARTNERS-->
 <div class="partners">
-    <div class="partners-item"><a href="https://www.kuberg.com/en" target="_blank"><img src="img/kuberg.png" alt="" class="partner-logo"></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/uax.png" alt="" width="100%" class="partner-logo" id="uax" ></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/motottrade.png" alt="" width="100%" class="partner-logo" id="uax" ></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/hobby.png" alt="" width="100%" class="partner-logo" id="uax" ></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/hearts.png" alt="" width="100%" class="partner-logo" id="uax" ></a></div>
+    <div class="partners-item"><a href="https://www.kuberg.com/en" target="_blank"><img src="img/partners/kuberg.png" alt="" class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/moto.png" alt=""class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/uax.png" alt="" class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/hobby.png" alt="" class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/partners/hearts.png" alt="" class="partner-logo"></a></div>
 </div>
 <!--PARTNERS-->
 
