--- a/novinky.html
+++ b/novinky.html
@@ -49,14 +49,14 @@
             <img src="img/logo-hor-white.svg" alt="" width="20%">
         </div>
     </a>
-  </div><br><br>
+  </div><br>
 
 
   <!--MAIN START-->
   <div class="bazar">
-    <h1 class="bazar-headline">UDÁLOSTI A NOVINKY</h1>
+    <h1 class="bazar-headline" id="news-head">UDÁLOSTI A NOVINKY</h1>
     <p class="bazar-descp">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora totam sit nobis, aperiam nesciunt esse dignissimos facilis. Hic quidem quia fugiat quaerat, dolorum, obcaecati ratione minima, nemo tempora inventore aliquam.</p>
-    <br><br><br>
+    
 
 <div class="newest">
     <h1>Nejbližší motorkářská událost, na kterou se můžete těšit již brzy</h1>
