novinky, bazar, kontakt responsive

--- a/bazar.html
+++ b/bazar.html
@@ -55,8 +55,8 @@
   <!--MAIN START-->
 
   <div class="bazar">
-    <h1 class="bazar-headline">BAZAR MOTOREK</h1>
-    <p class="bazar-descp">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora totam sit nobis, aperiam nesciunt esse dignissimos facilis. Hic quidem quia fugiat quaerat, dolorum, obcaecati ratione minima, nemo tempora inventore aliquam.</p>
+    <h1 class="bazar-headline" id="baz-head">BAZAR MOTOREK</h1>
+    <p class="bazar-descp" id="baz-des">Přemýšlíte nad koupou motorky, ale nechcete investovat do nového stroje? Podívejte se do našeho bazaru. Určitě najdeme tu ideální motorku právě pro Vás.</p>
     <br><br><br>
     <div class="bazar-container">
         <div class="baz-item">
