--- a/kontakt.html
+++ b/kontakt.html
@@ -140,7 +140,7 @@
             <option value="Členství">Členství</option>
             <option value="Organizace události">Organizace události</option>
             <option value="Individuální domluva">Individuální domluva</option>
-            <option value="Individuální domluva">Jiný dotaz</option>
+            <option value="Jiné">Jiný dotaz</option>
           </select>
       </div>
   
@@ -153,7 +153,7 @@
   
       <div class="input-wrap">
         <input type="checkbox" id="d">
-        <label for="d">Odesláním formuláře souhlasíte se zpracováním osobních údajů</label>
+        <label for="d" id="send-sub">Odesláním formuláře souhlasíte se zpracováním osobních údajů</label>
       </div>
   
       <div class="input-wrap">
@@ -179,14 +179,14 @@
 
 
   <div class="block-three">
-    <div class="service-head">
+    <div class="service-head" id="weare">
       <h2>A kdo vlastně jsme?</h2>
   </div>
-    <div class="person-container">
-        <div class="person-item">
+    <div class="person-container" id="vojta">
+        <div class="person-item" id="pers-pic">
             <img src="img/Vojta.jpg" alt="">
         </div>
-        <div class="person-item">
+        <div class="person-item" id="pers-inf">
             <div class="personal-info">
             <h3 class="name">Vojta</h3>
             <p class="description"> <strong>Záliby: </strong> Motocross,  posilování,  ostatní sporty,  rodina,  cestování,  Universe,  cizí jazyky,  přátelé</p>
@@ -215,7 +215,7 @@
     </div>
 
     <div class="person-container" id="banik">
-        <div class="person-item" >
+        <div class="person-item" id="pers-inf" >
             <div class="personal-info">
             <h3 class="name">Baník</h3>
             <p class="description"><strong>Záliby: </strong>Freestyle Motocross,  rybaření,  zaměstnání,  sport,  přátelé </p>
@@ -240,7 +240,7 @@
         </div>
     </div>
 
-        <div class="person-item">
+        <div class="person-item" id="pers-pic">
             <img src="img/Banik.jpg" alt="">
         </div>
     </div>
