--- a/novinky.html
+++ b/novinky.html
@@ -55,7 +55,13 @@
   <!--MAIN START-->
   <div class="bazar">
     <h1 class="bazar-headline" id="news-head">UDÁLOSTI A NOVINKY</h1>
-    <p class="bazar-descp">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora totam sit nobis, aperiam nesciunt esse dignissimos facilis. Hic quidem quia fugiat quaerat, dolorum, obcaecati ratione minima, nemo tempora inventore aliquam.</p>
+    <p class="bazar-descp">Nenechte si ujít ty nejlepší motorkářské akce v České republice. Pravidelně Vás budeme informovat o událostech a novinkách ze světa motorek tady,nebo na našich sociálních sítích</p>
+    <div class="news-social">
+        <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank"><i class="fab fa-facebook-square"></i></a>
+        <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="blank"><i class="fab fa-youtube"></i></a>
+        <a href="#" target="blank"><i class="fab fa-twitter-square"></i></a><br><br>
+    </div>
     
 
 <div class="newest">
