--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/responsive-home.css">
@@ -44,10 +45,10 @@
     <span onclick="openNav()" class="toggle-btn"><img src="img/toggle-btn.svg" alt="" width="10%">   Menu</span>
     <a href="index.html">
         <div class="logo">
-            <img src="img/logo-hor-white.svg" alt="" width="20%">
+            <img src="img/logo-hor-white.svg" alt="">
         </div>
     </a>
-  </div><br><br>
+  </div><br>
 
     <div class="main-headline">
         <div class="head">
@@ -61,10 +62,9 @@
     <div class="social">
         <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank"><i class="fab fa-facebook-square"></i></a>
         <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
-        <a href="#" target="blank"><i class="fab fa-youtube"></i></a>
-        <a href="#" target="blank"><i class="fab fa-twitter-square"></i></a><br><br>
+        <a href="#" target="blank" ><i class="fab fa-youtube"></i></a>
         <h2 class="hash">#JEZDISNAMI - #RIDEWITHUS / #LITEJSNAMI - #FLYWITHUS</h2>
-    </div><br><br><br><br><br><br>
+    </div><br>
 
 
 
@@ -72,21 +72,21 @@
         <div class="services-item">
             <div class="services">
                 <h2>Nabídka Motorek</h2>
-                <p>Zjistěte více o nabídce nových a starších motorek a o možnosti jejich pronájmu</p><br>
+                <p>Nabízíme k pronájmu a prodeji širokou škálu elektro-motorek značky Kuberg pro děti od 2,5 let i pro dospělé. Zjistěte více o nabídce nových i starších motorek a o možnosti jejich pronájmu</p><br>
                 <a href="motorky.html" class="service-btn">Více</a>
             </div>
         </div>
         <div class="services-item">
             <div class="services">
                 <h2>Naše služby</h2>
-                <p>Nabízíme k pronájmu a prodeji širokou škálu elektro-motorek značky Kuberg pro děti od 2,5 let i pro dospělé, provádíme servis, pořádáme nebo jsme součástí různých událostí, předáváme zkušenosti s jízdou na motorce a mnohé další.</p><br>
+                <p>Kromě prodej a pronájmu provádíme taky servis, pořádáme nebo jsme součástí různých událostí, předáváme zkušenosti s jízdou na motorce a mnohé další.</p><br>
                 <a href="sluzby.html" class="service-btn">Více</a>
             </div>
         </div>
         <div class="services-item">
             <div class="services">
                 <h2>Novinky a události</h2>
-                <p>Podívejte se na pořádané akce a události, kterými jsme součástí.</p><br>
+                <p>Celoročně se pořádají různé akce pro milovníky motorek.Podívejte se na pořádané akce a události, kterými jsme taky součástí.</p><br>
                 <a href="novinky.html" class="service-btn">Více</a>
             </div>
         </div>
