responsive - home, sluzby, motorky, novinky

--- a/novinky.html
+++ b/novinky.html
@@ -60,7 +60,6 @@
         <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank"><i class="fab fa-facebook-square"></i></a>
         <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
         <a href="#" target="blank"><i class="fab fa-youtube"></i></a>
-        <a href="#" target="blank"><i class="fab fa-twitter-square"></i></a><br><br>
     </div>
     
 
@@ -81,7 +80,7 @@
 </div><br><br>
 
 <div class="sub-head">
-    <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, dolorem. Maiores quaerat repellat debitis perspiciatis molestias aperiam vero sequi recusandae facilis qui quasi explicabo, porro, a mollitia molestiae dolore accusantium.</h2>
+    <h2>Celoročně se pořádají různé akce pro milovníky motorek.Podívejte se na pořádané akce a události, kterými jsme taky součástí.</h2>
 </div><br><br>
 
 <div class="bazar-container">
@@ -249,7 +248,7 @@
 </div><br>
 
 <div class="sub-head">
-    <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, dolorem. Maiores quaerat repellat debitis perspiciatis molestias aperiam vero sequi recusandae facilis qui quasi explicabo, porro, a mollitia molestiae dolore accusantium.</h2>
+    <h2>Zajímáte se o novinky ze světa motorek? Nenechte si ujít nejžahvější informace.</h2>
 </div><br><br>
 
 <div class="bazar-container">
