--- a/sluzby.html
+++ b/sluzby.html
@@ -165,7 +165,7 @@
         <p>Domluvíme se na datu, délce skákání, složitosti triků, počtu jezdců a dalších možnostech.</p><br>
         <p>Přivezeme speciální mobilní dopadovou plochu a rampu, vše ustavíme a připravíme a show může začít. V případě, že je možnost uspořádat show s dopadem na hlínu, nepotřebujeme tedy mobilní dopad a společně z velkého množství hlíny za pomocí bagru dopad vytvoříme.</p><br>
         
-        <a href="kontakt.html"> Chci FMX Show</a><br><br>
+        <a href="kontakt.html"> Chci FMX Show</a>
 
         <div class="gallery">
             <div class="gallery-item"><img src="img/gallery/1.jpg" alt=""></div>
@@ -189,8 +189,8 @@
 
     <div class="blockfive-item">
         <div class="fiveitem-one"><img src="img/motorky/Kuberg-Trial.png" width="50%" alt=""></div>
-        <div class="fiveitem-one"><img src="img/motorky/Kuberg-Trial.png" width="50%" alt=""></div>
-        <div class="fiveitem-one"><img src="img/motorky/Kuberg-Trial.png" width="50%" alt=""></div>
+        <div class="fiveitem-one"><img src="img/motorky/Kuberg-Freerider.png" width="50%" alt=""></div>
+        <div class="fiveitem-one"><img src="img/motorky/Kuberg-Cross.png" width="50%" alt=""></div>
     </div>
 
     <a href="bazar.html" id="goto">Přejít na bazar</a>
@@ -223,7 +223,7 @@
       <div class="blocksix-item">
           <h3>Koupili jste si elektrický motocykl Kuberg, například model START, ale dítě již vyrostlo a potřebuje větší?
 
-            Buď můžete vložit inzerát do novin či na internet, anebo napsat nám a probereme možnost odkupu i s možností výměny za jinou motorku.</h3><br>
+            Buď můžete vložit inzerát do novin či na internet, anebo napsat nám a probereme možnost odkupu i s možností výměny za jinou motorku.</h3>
       </div>
 
       <a href="kontakt.html" id="sell">Chci prodat motorku</a>
@@ -262,7 +262,7 @@
   <div class="blockeight">
 <p>Máte nápad na aktivitu nebo akci, která by mohla být spojená s naší firmou a s elektromotorkama?
 
-    Napište nám, domluvíme se a společně ho zrealizujeme!</p><br>
+    Napište nám, domluvíme se a společně ho zrealizujeme!</p>
 
     <a href="kontakt.html" id="sell">OSLOVTE NÁS</a>
 
