--- a/sluzby.html
+++ b/sluzby.html
@@ -17,6 +17,7 @@
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">    
 <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/style-two.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/responsive.css">
 
 </head>
