--- a/kontakt.html
+++ b/kontakt.html
@@ -17,6 +17,7 @@
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">    
 <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/style-two.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/responsive.css">
 
 </head>
@@ -64,13 +65,13 @@
     <p><strong>Spisová značka</strong>: C 70050 vedená u Krajského soudu v Ostravě</p>
     <p><strong>E-mail</strong>: <a href="mailto:freemotostyle@gmail.com">freemotostyle@gmail.com</a></p>
     <p><strong>Telefon</strong>: <a href="tel:+420722757800">+420 722 757 800</a></p>
-    <p><strong>Telefon</strong>: <a href="tel:+420722757880">+420 722 757 880</a></p><br>
+    <p><strong>Telefon</strong>: <a href="tel:+420722757880">+420 722 757 880</a></p>
     
     <div class="info-social">
         <a href="https://www.facebook.com/FREEmotoSTYLEacademy" target="blank"><i class="fab fa-facebook-square"></i></a>
         <a href="#" target="blank"><i class="fab fa-instagram"></i></a>
         <a href="#" target="blank"><i class="fab fa-youtube"></i></a>
-        <a href="#" target="blank"><i class="fab fa-twitter-square"></i></a><br><br>
+        <a href="#" target="blank"><i class="fab fa-twitter-square"></i></a><br>
     </div>
 
     <h3 class="info-hash">#JEZDISNAMI - #RIDEWITHUS<br>#LITEJSNAMI - #FLYWITHUS</h3>
