--- a/motorky.html
+++ b/motorky.html
@@ -18,6 +18,7 @@
 
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="css/style-four.css">
+<link rel="stylesheet" href="css/footer.css">
 <link rel="stylesheet" href="css/responsive.css">
 <link rel="stylesheet" href="css/slick.css">
 
