anchor, links corrections

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="main-headline">
         <div class="head">
             <h1 class="headline">Užijte si s námi motorkářské<br>adrenalinové zážitky.</h1><br>
-            <a class="headline-btn" href="#aboutus">Více o nás</a>
+            <a class="headline-btn" href="kontakt.html#aboutus">Více o nás</a>
         </div>
     </div>
 
@@ -122,7 +122,7 @@
     <h2>Opravdu moc nás naplňuje, když nabízíme příležitost, kterou jsme my neměli a tedy, když vidíme rozzářené oči těch nejmenších, ale i starších, tak víme, že to je přesně to, proč jsme tady. V budoucnu se chceme ohlédnout a vidět úspěšné jezdce v jakémkoliv motoristickém sportu nebo prostě jen spokojené zájemce, kteří se poprvé svezli právě u nás a splnili jsme jim jejich sen.</h2>
 </section>
 
-   <h2 class="block-three-headline" id="aboutus">Naši partneři</h2>
+   <h2 class="block-three-headline">Naši partneři</h2>
 
 </div>
 
@@ -179,7 +179,7 @@
     </div>
     <hr>
     <p class="location">Najdete nás v: Opavsko, Ostravsko, Pardubicko, Brněnsko</p>
-    <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="https://divavirtualagency.com" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
+    <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="http://www.divavirtualagency.com/" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
 </footer>
 <!--FOOTER END-->
 
