--- a/motorky.html
+++ b/motorky.html
@@ -1128,7 +1128,7 @@
     </div>
     <hr>
     <p class="location">Najdete nás v: Opavsko, Ostravsko, Pardubicko, Brněnsko</p>
-    <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="www.divavirtualagency.com" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
+    <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="http://www.divavirtualagency.com/" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
 </footer>
 <!--FOOTER END-->
 
