--- a/kontakt.html
+++ b/kontakt.html
@@ -179,7 +179,7 @@
   <!-- end of Card -->
 
 
-  <div class="block-three">
+  <div class="block-three" id="aboutus">
     <div class="service-head" id="weare">
       <h2>A kdo vlastně jsme?</h2>
   </div>
@@ -288,7 +288,7 @@
     </div>
     <hr>
     <p class="location">Najdete nás v: Opavsko, Ostravsko, Pardubicko, Brněnsko</p>
-    <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="www.divavirtualagency.com" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
+    <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="http://www.divavirtualagency.com/" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
 </footer>
 <!--FOOTER END-->
 
